tests/fail/fail_molda_lowercase_name.kr
molda pessoa {
    textu nomi;
}

fn inisiu() {
    mostran("nome de tipo invalido");
}
